Made the Ecore importer warn about its approximations, gh #907
The by-design approximations of the Ecore encoding - a custom data type
becoming a string, and the order and duplicates of a many-valued feature
dropped by the direct encoding - were silent, because GROOVE had no
warning severity when the importer was written. They are now WARNING
diagnostics on the produced type graph, once per affected feature and
with the class node as context, so the user sees what the encoding did
without the import being rejected. The host graph gets no warnings of
its own: the approximations are decided by the meta-model.

The two dialog gates of EcorePorter that gh #907 wanted switched to
hasErrors() are left alone: one guards the export, whose converter
produces only blocking errors and has no graph to attach a warning to,
the other guards EMF's own diagnostics of the loaded resource. The
import path has no gate at all; the imported graphs carry their errors
into the store, where the resource models pick them up.

The warnings are not persisted, so they disappear when the grammar is
reloaded from disk. That is the lifetime of an import diagnostic; the
constraints the approximations impose on later edits of the GROOVE
graphs are a separate matter, to be expressed as conditions.

The severity cannot be passed among the format parameters of
Graph.addError, contrary to what the FormatError javadoc suggests: the
constructor formats the message with all parameters first, so the
severity would be consumed by a format specifier. Hence the local
addWarning helper.